<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
        android:orientation="vertical"
    tools:context=".RegisterServiceActivity"
    >
        <TextView
            android:id="@+id/txt_title_register_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_title_register_service"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_name"
            />

        <EditText
            android:id="@+id/txt_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_surname"
            />

        <TextView
            android:id="@+id/txt_type_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_type_service"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_box_lunch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/check_lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_almoco"
                android:textColor="@color/colorPrimary"
                android:textSize="10pt"
                android:textStyle="bold"
                android:layout_marginBottom="8pt"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_box_cake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/check_cake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_boleira"
                android:textColor="@color/colorPrimary"
                android:textSize="10pt"
                android:textStyle="bold"
                android:layout_marginBottom="8pt"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_box_hair_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/check_hair_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_cabeleleira"
                android:textColor="@color/colorPrimary"
                android:textSize="10pt"
                android:textStyle="bold"
                android:layout_marginBottom="8pt"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_box_chef"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/check_chef"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_cozinheira"
                android:textColor="@color/colorPrimary"
                android:textSize="10pt"
                android:textStyle="bold"
                android:layout_marginBottom="8pt"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_box_pizza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/check_pizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_faz_pizza"
                android:textColor="@color/colorPrimary"
                android:textSize="10pt"
                android:textStyle="bold"
                android:layout_marginBottom="8pt"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_box_nails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/check_nails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_manicure"
                android:textColor="@color/colorPrimary"
                android:textSize="10pt"
                android:textStyle="bold"
                android:layout_marginBottom="8pt"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_box_color_hair"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

            <TextView
                android:id="@+id/check_color_hair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_pinta_cabelo"
                android:textColor="@color/colorPrimary"
                android:textSize="10pt"
                android:textStyle="bold"
                android:layout_marginBottom="8pt"
                />
        </LinearLayout>

        <EditText
            android:id="@+id/txt_price_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_price_service"/>

        <EditText
            android:id="@+id/txt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_address"
            />

        <RadioGroup
            android:id="@+id/txt_group_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/txt_mobility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_mobility"
                />
            <RadioButton
                android:id="@+id/txt_radio_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_radio_yes"
                />

            <RadioButton
                android:id="@+id/txt_radio_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_radio_no"
                />
        </RadioGroup>

        <EditText
            android:id="@+id/txt_price_transport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_price_transport"/>

        <EditText
            android:id="@+id/txt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_phone"
            />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_email"/>

        <Button
            android:id="@+id/btn_register_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_register_service"
            android:background="@color/btn_color"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:padding="23sp"
            android:layout_marginTop="10sp"
            />
    </LinearLayout>
</ScrollView>