<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LearnSubjectActivity"
    android:id="@+id/screen_learn_subject"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_title_learn_subject"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/title_main"
            android:layout_marginBottom="30sp"
            />

        <TextView
            android:id="@+id/link_marmitex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/link_marmitex"
            android:textColorLink="@color/title_main"
            android:textStyle="bold"
            android:textSize="23sp"
            android:layout_marginBottom="15sp"
            />

        <TextView
            android:id="@+id/link_summer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/link_summer"
            android:textColorLink="@color/title_main"
            android:textStyle="bold"
            android:textSize="23sp"
            android:layout_marginBottom="15sp"
            />

        <TextView
            android:id="@+id/link_revenda_produtos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/link_revenda_produtos"
            android:textColorLink="@color/title_main"
            android:textStyle="bold"
            android:textSize="23sp"
            android:layout_marginBottom="15sp"
            />
    </LinearLayout>

</ScrollView>